2007-02-10  Rafael Villar Burke  <pachi@rvburke.com>

	* MAINTAINERS: update e-mail

2007-02-09  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add PyTrainer

2007-02-07  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Gnapsack

2007-02-06  Rafael Villar Burke  <pachi@rvburke.com>

	* newsitems.py: Advertise 2.10.4 release
	* applications.src: Update gquilt description

2007-02-05  Rafael Villar Burke  <pachi@rvburke.com>

	* articles/Creating...: Close anchor tag.
	* applications.src: Add mp3val-gui and dbus-inspector

2007-01-30  Olav Vitters  <olav@bkor.dhs.org>

	* Makefile: cp -fa to force the files to be copied (fixes build).

2007-01-30  Rafael Villar Burke  <pachi@rvburke.com>

	* downloads.src, developer.src: Change references to CVS to SVN.

2007-01-15  Christian Reis  <kiko@async.com.br>

	* applications.src: Add AVC.

2007-01-10  Rafael Villar Burke  <pachi@rvburke.com>

	* developer.src, head.src: change Viewcvs urls to subversion ones.

2006-12-24  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Planimo.

2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add french translations of Marc Mruss
	by Daniel Coquette.

2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Exaile!.

2006-12-18  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Deluge bittorrent client.

2006-12-15  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Python GTK Console widget.

2006-12-13  Rafael Villar Burke  <pachi@rvburke.com>

	* tutorial.src: Add small intro paragraph referring to other
	introductory material on the web (articles, and API ref.)

2006-11-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* people.src: Add link to my entry

2006-10-31  Christian Reis  <kiko@async.com.br>

	* articles.src: add japanese translation of Writing a Custom
	Widget Using PyGTK, by Satoshi Tanabe. Some reformatting.
