@@ -1,3 +1,7 @@
+2007-02-13  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* newsitems: Add all-in-one installer link
+
 2007-02-10  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* MAINTAINERS: update e-mail
